<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="85dp"
            android:layout_height="51dp"
            android:layout_marginTop="68dp"
            android:text="@string/ws"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/spinner1"
            app:layout_constraintHorizontal_bias="0.893"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="159dp"
            android:layout_height="37dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="36dp"
            android:backgroundTint="@color/secondaryDarkColor"
            android:backgroundTintMode="add"
            android:spinnerMode="dropdown"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck">

        </Spinner>

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="287dp"
            android:layout_height="63dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:text="@string/IP_number"
                    android:textColor="@color/secondaryDarkColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ipValue"
                    android:layout_width="161dp"
                    android:layout_height="27dp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/secondaryColor"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="111dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Puerto"
                    android:textColor="@color/secondaryDarkColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/portValue"
                    android:layout_width="153dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textColor="@color/secondaryColor"
                    android:textSize="18sp" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="215dp"
            android:layout_height="35dp"
            android:layout_marginTop="60dp"
            android:text="@string/protocol"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="225dp"
            android:layout_height="108dp"
            android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton"
            app:layout_constraintVertical_bias="0.208">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/latitud_txt"
                    android:textColor="@color/secondaryDarkColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLatitude"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:textAlignment="textEnd"
                    android:textColor="#6d0c10"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitud_txt"
                    android:textColor="@color/secondaryDarkColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLongitude"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:textAlignment="textEnd"
                    android:textColor="#6d0c10"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Time"
                    android:textColor="@color/secondaryDarkColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:textAlignment="textEnd"
                    android:textColor="#6d0c10"
                    android:textSize="16sp" />/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Date"
                    android:textColor="@color/secondaryDarkColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:textAlignment="textEnd"
                    android:textColor="#6d0c10"
                    android:textSize="16sp" />/>

            </TableRow>

        </TableLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="3dp"
            android:layout_marginTop="20dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <View
            android:id="@+id/divider2"
            android:layout_width="409dp"
            android:layout_height="3dp"
            android:layout_marginTop="28dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/secondaryColor"
            android:fontFamily="monospace"
            android:text="ToggleButton"
            android:textAllCaps="false"
            android:textColor="@color/secondaryTextColor"
            android:textOff="▶ Iniciar"

            android:textOn="■ Detener"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>